parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BINOMIAL
    MEAN
    MEDIAN
    MODE
    PLOT
    POISSON
    STANDARD_DEVIATION
    VARIANCE

Grammar

Rule 0     S' -> program_main
Rule 1     program_main -> BTSProgam CTE_ID startup SEMI_COLON globalVariables globalFunctions MAIN saveFuncID addMemoryInfo LEFT_PAREN RIGHT_PAREN setMain funcBody endFunction endProgram endPrint
Rule 2     globalVariables -> vars
Rule 3     globalVariables -> empty
Rule 4     globalFunctions -> funcs
Rule 5     globalFunctions -> empty
Rule 6     vars -> auxVars
Rule 7     auxVars -> VAR type vars_type_single
Rule 8     auxVars -> VAR type vars_type_array
Rule 9     auxVars -> VAR type vars_type_matrix
Rule 10    auxVars -> empty
Rule 11    vars_type_single -> CTE_ID saveVariableID COMMA vars_type_single
Rule 12    vars_type_single -> CTE_ID saveVariableID SEMI_COLON auxVars
Rule 13    vars_type_array -> CTE_ID saveVariableID LEFT_BRACKET CTE_INT RIGHT_BRACKET COMMA vars_type_array
Rule 14    vars_type_array -> CTE_ID saveVariableID LEFT_BRACKET CTE_INT RIGHT_BRACKET SEMI_COLON auxVars
Rule 15    vars_type_matrix -> CTE_ID saveVariableID LEFT_BRACKET CTE_INT RIGHT_BRACKET LEFT_BRACKET CTE_INT RIGHT_BRACKET COMMA vars_type_matrix
Rule 16    vars_type_matrix -> CTE_ID saveVariableID LEFT_BRACKET CTE_INT RIGHT_BRACKET LEFT_BRACKET CTE_INT RIGHT_BRACKET SEMI_COLON auxVars
Rule 17    funcs -> funcs_aux globalFunctions
Rule 18    funcs_aux -> FUNC type CTE_ID saveFuncID LEFT_PAREN params RIGHT_PAREN funcBody addMemoryInfo endFunction
Rule 19    funcs_aux -> FUNC CTE_ID saveFuncID LEFT_PAREN params RIGHT_PAREN funcBody addMemoryInfo endFunction
Rule 20    params -> auxParams
Rule 21    params -> empty
Rule 22    auxParams -> type CTE_ID multipleParams
Rule 23    multipleParams -> COMMA auxParams
Rule 24    multipleParams -> empty
Rule 25    funcBody -> LEFT_CURLY_BRACKET auxFuncBody RIGHT_CURLY_BRACKET
Rule 26    auxFuncBody -> vars statements auxFuncBody
Rule 27    auxFuncBody -> statements auxFuncBody
Rule 28    auxFuncBody -> empty
Rule 29    return -> RETURN RETURN_SIGN LEFT_PAREN auxReturn RIGHT_PAREN SEMI_COLON
Rule 30    auxReturn -> logicExpression
Rule 31    auxReturn -> empty
Rule 32    type -> INT setCurrentType
Rule 33    type -> FLOAT setCurrentType
Rule 34    type -> BOOL setCurrentType
Rule 35    type -> STRING setCurrentType
Rule 36    statements -> assignment
Rule 37    statements -> writting
Rule 38    statements -> reading
Rule 39    statements -> if
Rule 40    statements -> while
Rule 41    statements -> return
Rule 42    writting -> PRINT LEFT_PAREN auxWritting RIGHT_PAREN SEMI_COLON
Rule 43    auxWritting -> logicExpression doWrite multipleWrite
Rule 44    auxWritting -> CTE_STRING doWriteString multipleWrite
Rule 45    multipleWrite -> COMMA auxWritting
Rule 46    multipleWrite -> empty
Rule 47    reading -> READ_INPUT addOperator LEFT_PAREN auxReading RIGHT_PAREN SEMI_COLON
Rule 48    auxReading -> CTE_ID addOperand doReading multipleRead
Rule 49    multipleRead -> COMMA auxReading
Rule 50    multipleRead -> empty
Rule 51    assignment -> CTE_ID addOperand EQUAL addOperator logicExpression doAssign SEMI_COLON
Rule 52    logicExpression -> exp doLogicExpression auxLogicExpression
Rule 53    auxLogicExpression -> AND addOperator logicExpression
Rule 54    auxLogicExpression -> OR addOperator logicExpression
Rule 55    auxLogicExpression -> empty
Rule 56    exp -> exp2 doCompExpression auxExp
Rule 57    auxExp -> GREATER_THAN addOperator exp
Rule 58    auxExp -> GREATER_EQUAL_THAN addOperator exp
Rule 59    auxExp -> LESS_THAN addOperator exp
Rule 60    auxExp -> LESS_EQUAL_THAN addOperator exp
Rule 61    auxExp -> NOT_EQUALS addOperator exp
Rule 62    auxExp -> EQUALS addOperator exp
Rule 63    auxExp -> empty
Rule 64    exp2 -> term doExpression exp2Aux
Rule 65    exp2Aux -> PLUS addOperator exp2
Rule 66    exp2Aux -> MINUS addOperator exp2
Rule 67    exp2Aux -> empty
Rule 68    term -> factor doTerm auxTerm
Rule 69    auxTerm -> TIMES addOperator term
Rule 70    auxTerm -> DIV addOperator term
Rule 71    auxTerm -> MOD addOperator term
Rule 72    auxTerm -> EXP addOperator term
Rule 73    auxTerm -> empty
Rule 74    factor -> LEFT_PAREN addParenthesis logicExpression RIGHT_PAREN removeParenthesis
Rule 75    factor -> constants
Rule 76    constants -> CTE_ID addOperand
Rule 77    constants -> CTE_INT addConstantOperand
Rule 78    constants -> CTE_FLOAT addConstantOperand
Rule 79    constants -> CTE_STRING addConstantOperand
Rule 80    constants -> TRUE addConstantBool
Rule 81    constants -> FALSE addConstantBool
Rule 82    if -> IF LEFT_PAREN logicExpression doIF RIGHT_PAREN funcBody else endIF
Rule 83    else -> ELSE doElse IF LEFT_PAREN logicExpression doIF RIGHT_PAREN funcBody endIF
Rule 84    else -> ELSE doElse funcBody
Rule 85    else -> empty
Rule 86    while -> WHILE LEFT_PAREN addCondStart logicExpression doWhile RIGHT_PAREN funcBody endWhile
Rule 87    for -> FOR LEFT_PAREN CTE_ID COMMA auxFor COMMA auxFor RIGHT_PAREN funcBody
Rule 88    auxFor -> CTE_ID
Rule 89    auxFor -> CTE_INT
Rule 90    startup -> <empty>
Rule 91    setMain -> <empty>
Rule 92    endProgram -> <empty>
Rule 93    endPrint -> <empty>
Rule 94    saveFuncID -> <empty>
Rule 95    addMemoryInfo -> <empty>
Rule 96    endFunction -> <empty>
Rule 97    doIF -> <empty>
Rule 98    endIF -> <empty>
Rule 99    doElse -> <empty>
Rule 100   doWhile -> <empty>
Rule 101   endWhile -> <empty>
Rule 102   addCondStart -> <empty>
Rule 103   saveVariableID -> <empty>
Rule 104   setCurrentType -> <empty>
Rule 105   addOperand -> <empty>
Rule 106   addConstantOperand -> <empty>
Rule 107   addConstantBool -> <empty>
Rule 108   addOperator -> <empty>
Rule 109   addParenthesis -> <empty>
Rule 110   removeParenthesis -> <empty>
Rule 111   doLogicExpression -> <empty>
Rule 112   doCompExpression -> <empty>
Rule 113   doExpression -> <empty>
Rule 114   doTerm -> <empty>
Rule 115   doAssign -> <empty>
Rule 116   doWrite -> <empty>
Rule 117   doWriteString -> <empty>
Rule 118   doReading -> <empty>
Rule 119   empty -> <empty>

Terminals, with rules where they appear

AND                  : 53
BINOMIAL             : 
BOOL                 : 34
BTSProgam            : 1
COMMA                : 11 13 15 23 45 49 87 87
CTE_FLOAT            : 78
CTE_ID               : 1 11 12 13 14 15 16 18 19 22 48 51 76 87 88
CTE_INT              : 13 14 15 15 16 16 77 89
CTE_STRING           : 44 79
DIV                  : 70
ELSE                 : 83 84
EQUAL                : 51
EQUALS               : 62
EXP                  : 72
FALSE                : 81
FLOAT                : 33
FOR                  : 87
FUNC                 : 18 19
GREATER_EQUAL_THAN   : 58
GREATER_THAN         : 57
IF                   : 82 83
INT                  : 32
LEFT_BRACKET         : 13 14 15 15 16 16
LEFT_CURLY_BRACKET   : 25
LEFT_PAREN           : 1 18 19 29 42 47 74 82 83 86 87
LESS_EQUAL_THAN      : 60
LESS_THAN            : 59
MAIN                 : 1
MEAN                 : 
MEDIAN               : 
MINUS                : 66
MOD                  : 71
MODE                 : 
NOT_EQUALS           : 61
OR                   : 54
PLOT                 : 
PLUS                 : 65
POISSON              : 
PRINT                : 42
READ_INPUT           : 47
RETURN               : 29
RETURN_SIGN          : 29
RIGHT_BRACKET        : 13 14 15 15 16 16
RIGHT_CURLY_BRACKET  : 25
RIGHT_PAREN          : 1 18 19 29 42 47 74 82 83 86 87
SEMI_COLON           : 1 12 14 16 29 42 47 51
STANDARD_DEVIATION   : 
STRING               : 35
TIMES                : 69
TRUE                 : 80
VAR                  : 7 8 9
VARIANCE             : 
WHILE                : 86
error                : 

Nonterminals, with rules where they appear

addCondStart         : 86
addConstantBool      : 80 81
addConstantOperand   : 77 78 79
addMemoryInfo        : 1 18 19
addOperand           : 48 51 76
addOperator          : 47 51 53 54 57 58 59 60 61 62 65 66 69 70 71 72
addParenthesis       : 74
assignment           : 36
auxExp               : 56
auxFor               : 87 87
auxFuncBody          : 25 26 27
auxLogicExpression   : 52
auxParams            : 20 23
auxReading           : 47 49
auxReturn            : 29
auxTerm              : 68
auxVars              : 6 12 14 16
auxWritting          : 42 45
constants            : 75
doAssign             : 51
doCompExpression     : 56
doElse               : 83 84
doExpression         : 64
doIF                 : 82 83
doLogicExpression    : 52
doReading            : 48
doTerm               : 68
doWhile              : 86
doWrite              : 43
doWriteString        : 44
else                 : 82
empty                : 3 5 10 21 24 28 31 46 50 55 63 67 73 85
endFunction          : 1 18 19
endIF                : 82 83
endPrint             : 1
endProgram           : 1
endWhile             : 86
exp                  : 52 57 58 59 60 61 62
exp2                 : 56 65 66
exp2Aux              : 64
factor               : 68
for                  : 
funcBody             : 1 18 19 82 83 84 86 87
funcs                : 4
funcs_aux            : 17
globalFunctions      : 1 17
globalVariables      : 1
if                   : 39
logicExpression      : 30 43 51 53 54 74 82 83 86
multipleParams       : 22
multipleRead         : 48
multipleWrite        : 43 44
params               : 18 19
program_main         : 0
reading              : 38
removeParenthesis    : 74
return               : 41
saveFuncID           : 1 18 19
saveVariableID       : 11 12 13 14 15 16
setCurrentType       : 32 33 34 35
setMain              : 1
startup              : 1
statements           : 26 27
term                 : 64 69 70 71 72
type                 : 7 8 9 18 22
vars                 : 2 26
vars_type_array      : 8 13
vars_type_matrix     : 9 15
vars_type_single     : 7 11
while                : 40
writting             : 37

Parsing method: LALR

state 0

    (0) S' -> . program_main
    (1) program_main -> . BTSProgam CTE_ID startup SEMI_COLON globalVariables globalFunctions MAIN saveFuncID addMemoryInfo LEFT_PAREN RIGHT_PAREN setMain funcBody endFunction endProgram endPrint

    BTSProgam       shift and go to state 2

    program_main                   shift and go to state 1

state 1

    (0) S' -> program_main .



state 2

    (1) program_main -> BTSProgam . CTE_ID startup SEMI_COLON globalVariables globalFunctions MAIN saveFuncID addMemoryInfo LEFT_PAREN RIGHT_PAREN setMain funcBody endFunction endProgram endPrint

    CTE_ID          shift and go to state 3


state 3

    (1) program_main -> BTSProgam CTE_ID . startup SEMI_COLON globalVariables globalFunctions MAIN saveFuncID addMemoryInfo LEFT_PAREN RIGHT_PAREN setMain funcBody endFunction endProgram endPrint
    (90) startup -> .

    SEMI_COLON      reduce using rule 90 (startup -> .)

    startup                        shift and go to state 4

state 4

    (1) program_main -> BTSProgam CTE_ID startup . SEMI_COLON globalVariables globalFunctions MAIN saveFuncID addMemoryInfo LEFT_PAREN RIGHT_PAREN setMain funcBody endFunction endProgram endPrint

    SEMI_COLON      shift and go to state 5


state 5

    (1) program_main -> BTSProgam CTE_ID startup SEMI_COLON . globalVariables globalFunctions MAIN saveFuncID addMemoryInfo LEFT_PAREN RIGHT_PAREN setMain funcBody endFunction endProgram endPrint
    (2) globalVariables -> . vars
    (3) globalVariables -> . empty
    (6) vars -> . auxVars
    (119) empty -> .
    (7) auxVars -> . VAR type vars_type_single
    (8) auxVars -> . VAR type vars_type_array
    (9) auxVars -> . VAR type vars_type_matrix
    (10) auxVars -> . empty

    FUNC            reduce using rule 119 (empty -> .)
    MAIN            reduce using rule 119 (empty -> .)
    VAR             shift and go to state 10

    globalVariables                shift and go to state 6
    vars                           shift and go to state 7
    empty                          shift and go to state 8
    auxVars                        shift and go to state 9

state 6

    (1) program_main -> BTSProgam CTE_ID startup SEMI_COLON globalVariables . globalFunctions MAIN saveFuncID addMemoryInfo LEFT_PAREN RIGHT_PAREN setMain funcBody endFunction endProgram endPrint
    (4) globalFunctions -> . funcs
    (5) globalFunctions -> . empty
    (17) funcs -> . funcs_aux globalFunctions
    (119) empty -> .
    (18) funcs_aux -> . FUNC type CTE_ID saveFuncID LEFT_PAREN params RIGHT_PAREN funcBody addMemoryInfo endFunction
    (19) funcs_aux -> . FUNC CTE_ID saveFuncID LEFT_PAREN params RIGHT_PAREN funcBody addMemoryInfo endFunction

    MAIN            reduce using rule 119 (empty -> .)
    FUNC            shift and go to state 15

    globalFunctions                shift and go to state 11
    funcs                          shift and go to state 12
    empty                          shift and go to state 13
    funcs_aux                      shift and go to state 14

state 7

    (2) globalVariables -> vars .

    FUNC            reduce using rule 2 (globalVariables -> vars .)
    MAIN            reduce using rule 2 (globalVariables -> vars .)


state 8

    (3) globalVariables -> empty .
    (10) auxVars -> empty .

  ! reduce/reduce conflict for FUNC resolved using rule 3 (globalVariables -> empty .)
  ! reduce/reduce conflict for MAIN resolved using rule 3 (globalVariables -> empty .)
    FUNC            reduce using rule 3 (globalVariables -> empty .)
    MAIN            reduce using rule 3 (globalVariables -> empty .)

  ! FUNC            [ reduce using rule 10 (auxVars -> empty .) ]
  ! MAIN            [ reduce using rule 10 (auxVars -> empty .) ]


state 9

    (6) vars -> auxVars .

    FUNC            reduce using rule 6 (vars -> auxVars .)
    MAIN            reduce using rule 6 (vars -> auxVars .)
    CTE_ID          reduce using rule 6 (vars -> auxVars .)
    PRINT           reduce using rule 6 (vars -> auxVars .)
    READ_INPUT      reduce using rule 6 (vars -> auxVars .)
    IF              reduce using rule 6 (vars -> auxVars .)
    WHILE           reduce using rule 6 (vars -> auxVars .)
    RETURN          reduce using rule 6 (vars -> auxVars .)


state 10

    (7) auxVars -> VAR . type vars_type_single
    (8) auxVars -> VAR . type vars_type_array
    (9) auxVars -> VAR . type vars_type_matrix
    (32) type -> . INT setCurrentType
    (33) type -> . FLOAT setCurrentType
    (34) type -> . BOOL setCurrentType
    (35) type -> . STRING setCurrentType

    INT             shift and go to state 17
    FLOAT           shift and go to state 18
    BOOL            shift and go to state 19
    STRING          shift and go to state 20

    type                           shift and go to state 16

state 11

    (1) program_main -> BTSProgam CTE_ID startup SEMI_COLON globalVariables globalFunctions . MAIN saveFuncID addMemoryInfo LEFT_PAREN RIGHT_PAREN setMain funcBody endFunction endProgram endPrint

    MAIN            shift and go to state 21


state 12

    (4) globalFunctions -> funcs .

    MAIN            reduce using rule 4 (globalFunctions -> funcs .)


state 13

    (5) globalFunctions -> empty .

    MAIN            reduce using rule 5 (globalFunctions -> empty .)


state 14

    (17) funcs -> funcs_aux . globalFunctions
    (4) globalFunctions -> . funcs
    (5) globalFunctions -> . empty
    (17) funcs -> . funcs_aux globalFunctions
    (119) empty -> .
    (18) funcs_aux -> . FUNC type CTE_ID saveFuncID LEFT_PAREN params RIGHT_PAREN funcBody addMemoryInfo endFunction
    (19) funcs_aux -> . FUNC CTE_ID saveFuncID LEFT_PAREN params RIGHT_PAREN funcBody addMemoryInfo endFunction

    MAIN            reduce using rule 119 (empty -> .)
    FUNC            shift and go to state 15

    funcs_aux                      shift and go to state 14
    globalFunctions                shift and go to state 22
    funcs                          shift and go to state 12
    empty                          shift and go to state 13

state 15

    (18) funcs_aux -> FUNC . type CTE_ID saveFuncID LEFT_PAREN params RIGHT_PAREN funcBody addMemoryInfo endFunction
    (19) funcs_aux -> FUNC . CTE_ID saveFuncID LEFT_PAREN params RIGHT_PAREN funcBody addMemoryInfo endFunction
    (32) type -> . INT setCurrentType
    (33) type -> . FLOAT setCurrentType
    (34) type -> . BOOL setCurrentType
    (35) type -> . STRING setCurrentType

    CTE_ID          shift and go to state 24
    INT             shift and go to state 17
    FLOAT           shift and go to state 18
    BOOL            shift and go to state 19
    STRING          shift and go to state 20

    type                           shift and go to state 23

state 16

    (7) auxVars -> VAR type . vars_type_single
    (8) auxVars -> VAR type . vars_type_array
    (9) auxVars -> VAR type . vars_type_matrix
    (11) vars_type_single -> . CTE_ID saveVariableID COMMA vars_type_single
    (12) vars_type_single -> . CTE_ID saveVariableID SEMI_COLON auxVars
    (13) vars_type_array -> . CTE_ID saveVariableID LEFT_BRACKET CTE_INT RIGHT_BRACKET COMMA vars_type_array
    (14) vars_type_array -> . CTE_ID saveVariableID LEFT_BRACKET CTE_INT RIGHT_BRACKET SEMI_COLON auxVars
    (15) vars_type_matrix -> . CTE_ID saveVariableID LEFT_BRACKET CTE_INT RIGHT_BRACKET LEFT_BRACKET CTE_INT RIGHT_BRACKET COMMA vars_type_matrix
    (16) vars_type_matrix -> . CTE_ID saveVariableID LEFT_BRACKET CTE_INT RIGHT_BRACKET LEFT_BRACKET CTE_INT RIGHT_BRACKET SEMI_COLON auxVars

    CTE_ID          shift and go to state 28

    vars_type_single               shift and go to state 25
    vars_type_array                shift and go to state 26
    vars_type_matrix               shift and go to state 27

state 17

    (32) type -> INT . setCurrentType
    (104) setCurrentType -> .

    CTE_ID          reduce using rule 104 (setCurrentType -> .)

    setCurrentType                 shift and go to state 29

state 18

    (33) type -> FLOAT . setCurrentType
    (104) setCurrentType -> .

    CTE_ID          reduce using rule 104 (setCurrentType -> .)

    setCurrentType                 shift and go to state 30

state 19

    (34) type -> BOOL . setCurrentType
    (104) setCurrentType -> .

    CTE_ID          reduce using rule 104 (setCurrentType -> .)

    setCurrentType                 shift and go to state 31

state 20

    (35) type -> STRING . setCurrentType
    (104) setCurrentType -> .

    CTE_ID          reduce using rule 104 (setCurrentType -> .)

    setCurrentType                 shift and go to state 32

state 21

    (1) program_main -> BTSProgam CTE_ID startup SEMI_COLON globalVariables globalFunctions MAIN . saveFuncID addMemoryInfo LEFT_PAREN RIGHT_PAREN setMain funcBody endFunction endProgram endPrint
    (94) saveFuncID -> .

    LEFT_PAREN      reduce using rule 94 (saveFuncID -> .)

    saveFuncID                     shift and go to state 33

state 22

    (17) funcs -> funcs_aux globalFunctions .

    MAIN            reduce using rule 17 (funcs -> funcs_aux globalFunctions .)


state 23

    (18) funcs_aux -> FUNC type . CTE_ID saveFuncID LEFT_PAREN params RIGHT_PAREN funcBody addMemoryInfo endFunction

    CTE_ID          shift and go to state 34


state 24

    (19) funcs_aux -> FUNC CTE_ID . saveFuncID LEFT_PAREN params RIGHT_PAREN funcBody addMemoryInfo endFunction
    (94) saveFuncID -> .

    LEFT_PAREN      reduce using rule 94 (saveFuncID -> .)

    saveFuncID                     shift and go to state 35

state 25

    (7) auxVars -> VAR type vars_type_single .

    FUNC            reduce using rule 7 (auxVars -> VAR type vars_type_single .)
    MAIN            reduce using rule 7 (auxVars -> VAR type vars_type_single .)
    CTE_ID          reduce using rule 7 (auxVars -> VAR type vars_type_single .)
    PRINT           reduce using rule 7 (auxVars -> VAR type vars_type_single .)
    READ_INPUT      reduce using rule 7 (auxVars -> VAR type vars_type_single .)
    IF              reduce using rule 7 (auxVars -> VAR type vars_type_single .)
    WHILE           reduce using rule 7 (auxVars -> VAR type vars_type_single .)
    RETURN          reduce using rule 7 (auxVars -> VAR type vars_type_single .)


state 26

    (8) auxVars -> VAR type vars_type_array .

    FUNC            reduce using rule 8 (auxVars -> VAR type vars_type_array .)
    MAIN            reduce using rule 8 (auxVars -> VAR type vars_type_array .)
    CTE_ID          reduce using rule 8 (auxVars -> VAR type vars_type_array .)
    PRINT           reduce using rule 8 (auxVars -> VAR type vars_type_array .)
    READ_INPUT      reduce using rule 8 (auxVars -> VAR type vars_type_array .)
    IF              reduce using rule 8 (auxVars -> VAR type vars_type_array .)
    WHILE           reduce using rule 8 (auxVars -> VAR type vars_type_array .)
    RETURN          reduce using rule 8 (auxVars -> VAR type vars_type_array .)


state 27

    (9) auxVars -> VAR type vars_type_matrix .

    FUNC            reduce using rule 9 (auxVars -> VAR type vars_type_matrix .)
    MAIN            reduce using rule 9 (auxVars -> VAR type vars_type_matrix .)
    CTE_ID          reduce using rule 9 (auxVars -> VAR type vars_type_matrix .)
    PRINT           reduce using rule 9 (auxVars -> VAR type vars_type_matrix .)
    READ_INPUT      reduce using rule 9 (auxVars -> VAR type vars_type_matrix .)
    IF              reduce using rule 9 (auxVars -> VAR type vars_type_matrix .)
    WHILE           reduce using rule 9 (auxVars -> VAR type vars_type_matrix .)
    RETURN          reduce using rule 9 (auxVars -> VAR type vars_type_matrix .)


state 28

    (11) vars_type_single -> CTE_ID . saveVariableID COMMA vars_type_single
    (12) vars_type_single -> CTE_ID . saveVariableID SEMI_COLON auxVars
    (13) vars_type_array -> CTE_ID . saveVariableID LEFT_BRACKET CTE_INT RIGHT_BRACKET COMMA vars_type_array
    (14) vars_type_array -> CTE_ID . saveVariableID LEFT_BRACKET CTE_INT RIGHT_BRACKET SEMI_COLON auxVars
    (15) vars_type_matrix -> CTE_ID . saveVariableID LEFT_BRACKET CTE_INT RIGHT_BRACKET LEFT_BRACKET CTE_INT RIGHT_BRACKET COMMA vars_type_matrix
    (16) vars_type_matrix -> CTE_ID . saveVariableID LEFT_BRACKET CTE_INT RIGHT_BRACKET LEFT_BRACKET CTE_INT RIGHT_BRACKET SEMI_COLON auxVars
    (103) saveVariableID -> .

    COMMA           reduce using rule 103 (saveVariableID -> .)
    SEMI_COLON      reduce using rule 103 (saveVariableID -> .)
    LEFT_BRACKET    reduce using rule 103 (saveVariableID -> .)

    saveVariableID                 shift and go to state 36

state 29

    (32) type -> INT setCurrentType .

    CTE_ID          reduce using rule 32 (type -> INT setCurrentType .)


state 30

    (33) type -> FLOAT setCurrentType .

    CTE_ID          reduce using rule 33 (type -> FLOAT setCurrentType .)


state 31

    (34) type -> BOOL setCurrentType .

    CTE_ID          reduce using rule 34 (type -> BOOL setCurrentType .)


state 32

    (35) type -> STRING setCurrentType .

    CTE_ID          reduce using rule 35 (type -> STRING setCurrentType .)


state 33

    (1) program_main -> BTSProgam CTE_ID startup SEMI_COLON globalVariables globalFunctions MAIN saveFuncID . addMemoryInfo LEFT_PAREN RIGHT_PAREN setMain funcBody endFunction endProgram endPrint
    (95) addMemoryInfo -> .

    LEFT_PAREN      reduce using rule 95 (addMemoryInfo -> .)

    addMemoryInfo                  shift and go to state 37

state 34

    (18) funcs_aux -> FUNC type CTE_ID . saveFuncID LEFT_PAREN params RIGHT_PAREN funcBody addMemoryInfo endFunction
    (94) saveFuncID -> .

    LEFT_PAREN      reduce using rule 94 (saveFuncID -> .)

    saveFuncID                     shift and go to state 38

state 35

    (19) funcs_aux -> FUNC CTE_ID saveFuncID . LEFT_PAREN params RIGHT_PAREN funcBody addMemoryInfo endFunction

    LEFT_PAREN      shift and go to state 39


state 36

    (11) vars_type_single -> CTE_ID saveVariableID . COMMA vars_type_single
    (12) vars_type_single -> CTE_ID saveVariableID . SEMI_COLON auxVars
    (13) vars_type_array -> CTE_ID saveVariableID . LEFT_BRACKET CTE_INT RIGHT_BRACKET COMMA vars_type_array
    (14) vars_type_array -> CTE_ID saveVariableID . LEFT_BRACKET CTE_INT RIGHT_BRACKET SEMI_COLON auxVars
    (15) vars_type_matrix -> CTE_ID saveVariableID . LEFT_BRACKET CTE_INT RIGHT_BRACKET LEFT_BRACKET CTE_INT RIGHT_BRACKET COMMA vars_type_matrix
    (16) vars_type_matrix -> CTE_ID saveVariableID . LEFT_BRACKET CTE_INT RIGHT_BRACKET LEFT_BRACKET CTE_INT RIGHT_BRACKET SEMI_COLON auxVars

    COMMA           shift and go to state 40
    SEMI_COLON      shift and go to state 41
    LEFT_BRACKET    shift and go to state 42


state 37

    (1) program_main -> BTSProgam CTE_ID startup SEMI_COLON globalVariables globalFunctions MAIN saveFuncID addMemoryInfo . LEFT_PAREN RIGHT_PAREN setMain funcBody endFunction endProgram endPrint

    LEFT_PAREN      shift and go to state 43


state 38

    (18) funcs_aux -> FUNC type CTE_ID saveFuncID . LEFT_PAREN params RIGHT_PAREN funcBody addMemoryInfo endFunction

    LEFT_PAREN      shift and go to state 44


state 39

    (19) funcs_aux -> FUNC CTE_ID saveFuncID LEFT_PAREN . params RIGHT_PAREN funcBody addMemoryInfo endFunction
    (20) params -> . auxParams
    (21) params -> . empty
    (22) auxParams -> . type CTE_ID multipleParams
    (119) empty -> .
    (32) type -> . INT setCurrentType
    (33) type -> . FLOAT setCurrentType
    (34) type -> . BOOL setCurrentType
    (35) type -> . STRING setCurrentType

    RIGHT_PAREN     reduce using rule 119 (empty -> .)
    INT             shift and go to state 17
    FLOAT           shift and go to state 18
    BOOL            shift and go to state 19
    STRING          shift and go to state 20

    params                         shift and go to state 45
    auxParams                      shift and go to state 46
    empty                          shift and go to state 47
    type                           shift and go to state 48

state 40

    (11) vars_type_single -> CTE_ID saveVariableID COMMA . vars_type_single
    (11) vars_type_single -> . CTE_ID saveVariableID COMMA vars_type_single
    (12) vars_type_single -> . CTE_ID saveVariableID SEMI_COLON auxVars

    CTE_ID          shift and go to state 49

    vars_type_single               shift and go to state 50

state 41

    (12) vars_type_single -> CTE_ID saveVariableID SEMI_COLON . auxVars
    (7) auxVars -> . VAR type vars_type_single
    (8) auxVars -> . VAR type vars_type_array
    (9) auxVars -> . VAR type vars_type_matrix
    (10) auxVars -> . empty
    (119) empty -> .

    VAR             shift and go to state 10
    FUNC            reduce using rule 119 (empty -> .)
    MAIN            reduce using rule 119 (empty -> .)
    CTE_ID          reduce using rule 119 (empty -> .)
    PRINT           reduce using rule 119 (empty -> .)
    READ_INPUT      reduce using rule 119 (empty -> .)
    IF              reduce using rule 119 (empty -> .)
    WHILE           reduce using rule 119 (empty -> .)
    RETURN          reduce using rule 119 (empty -> .)

    auxVars                        shift and go to state 51
    empty                          shift and go to state 52

state 42

    (13) vars_type_array -> CTE_ID saveVariableID LEFT_BRACKET . CTE_INT RIGHT_BRACKET COMMA vars_type_array
    (14) vars_type_array -> CTE_ID saveVariableID LEFT_BRACKET . CTE_INT RIGHT_BRACKET SEMI_COLON auxVars
    (15) vars_type_matrix -> CTE_ID saveVariableID LEFT_BRACKET . CTE_INT RIGHT_BRACKET LEFT_BRACKET CTE_INT RIGHT_BRACKET COMMA vars_type_matrix
    (16) vars_type_matrix -> CTE_ID saveVariableID LEFT_BRACKET . CTE_INT RIGHT_BRACKET LEFT_BRACKET CTE_INT RIGHT_BRACKET SEMI_COLON auxVars

    CTE_INT         shift and go to state 53


state 43

    (1) program_main -> BTSProgam CTE_ID startup SEMI_COLON globalVariables globalFunctions MAIN saveFuncID addMemoryInfo LEFT_PAREN . RIGHT_PAREN setMain funcBody endFunction endProgram endPrint

    RIGHT_PAREN     shift and go to state 54


state 44

    (18) funcs_aux -> FUNC type CTE_ID saveFuncID LEFT_PAREN . params RIGHT_PAREN funcBody addMemoryInfo endFunction
    (20) params -> . auxParams
    (21) params -> . empty
    (22) auxParams -> . type CTE_ID multipleParams
    (119) empty -> .
    (32) type -> . INT setCurrentType
    (33) type -> . FLOAT setCurrentType
    (34) type -> . BOOL setCurrentType
    (35) type -> . STRING setCurrentType

    RIGHT_PAREN     reduce using rule 119 (empty -> .)
    INT             shift and go to state 17
    FLOAT           shift and go to state 18
    BOOL            shift and go to state 19
    STRING          shift and go to state 20

    type                           shift and go to state 48
    params                         shift and go to state 55
    auxParams                      shift and go to state 46
    empty                          shift and go to state 47

state 45

    (19) funcs_aux -> FUNC CTE_ID saveFuncID LEFT_PAREN params . RIGHT_PAREN funcBody addMemoryInfo endFunction

    RIGHT_PAREN     shift and go to state 56


state 46

    (20) params -> auxParams .

    RIGHT_PAREN     reduce using rule 20 (params -> auxParams .)


state 47

    (21) params -> empty .

    RIGHT_PAREN     reduce using rule 21 (params -> empty .)


state 48

    (22) auxParams -> type . CTE_ID multipleParams

    CTE_ID          shift and go to state 57


state 49

    (11) vars_type_single -> CTE_ID . saveVariableID COMMA vars_type_single
    (12) vars_type_single -> CTE_ID . saveVariableID SEMI_COLON auxVars
    (103) saveVariableID -> .

    COMMA           reduce using rule 103 (saveVariableID -> .)
    SEMI_COLON      reduce using rule 103 (saveVariableID -> .)

    saveVariableID                 shift and go to state 58

state 50

    (11) vars_type_single -> CTE_ID saveVariableID COMMA vars_type_single .

    FUNC            reduce using rule 11 (vars_type_single -> CTE_ID saveVariableID COMMA vars_type_single .)
    MAIN            reduce using rule 11 (vars_type_single -> CTE_ID saveVariableID COMMA vars_type_single .)
    CTE_ID          reduce using rule 11 (vars_type_single -> CTE_ID saveVariableID COMMA vars_type_single .)
    PRINT           reduce using rule 11 (vars_type_single -> CTE_ID saveVariableID COMMA vars_type_single .)
    READ_INPUT      reduce using rule 11 (vars_type_single -> CTE_ID saveVariableID COMMA vars_type_single .)
    IF              reduce using rule 11 (vars_type_single -> CTE_ID saveVariableID COMMA vars_type_single .)
    WHILE           reduce using rule 11 (vars_type_single -> CTE_ID saveVariableID COMMA vars_type_single .)
    RETURN          reduce using rule 11 (vars_type_single -> CTE_ID saveVariableID COMMA vars_type_single .)


state 51

    (12) vars_type_single -> CTE_ID saveVariableID SEMI_COLON auxVars .

    FUNC            reduce using rule 12 (vars_type_single -> CTE_ID saveVariableID SEMI_COLON auxVars .)
    MAIN            reduce using rule 12 (vars_type_single -> CTE_ID saveVariableID SEMI_COLON auxVars .)
    CTE_ID          reduce using rule 12 (vars_type_single -> CTE_ID saveVariableID SEMI_COLON auxVars .)
    PRINT           reduce using rule 12 (vars_type_single -> CTE_ID saveVariableID SEMI_COLON auxVars .)
    READ_INPUT      reduce using rule 12 (vars_type_single -> CTE_ID saveVariableID SEMI_COLON auxVars .)
    IF              reduce using rule 12 (vars_type_single -> CTE_ID saveVariableID SEMI_COLON auxVars .)
    WHILE           reduce using rule 12 (vars_type_single -> CTE_ID saveVariableID SEMI_COLON auxVars .)
    RETURN          reduce using rule 12 (vars_type_single -> CTE_ID saveVariableID SEMI_COLON auxVars .)


state 52

    (10) auxVars -> empty .
